# symspellrs

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
examples/: simple_usage.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  symspell.rs
tests/: include_macro.rs
tests/data/: words.txt
